# template-nextjs-with-drf-server

./: .gitignore  pyproject.toml
config/: settings.py
