[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["hy-sksem <45358277+hy-sksem@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
django-cors-headers = "^3.14.0"
djangorestframework = "^3.14.0"
djoser = "^2.1.0"
python-decouple = "^3.8"
dj-database-url = "^1.2.0"
dj-static = "^0.0.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
